unpackaged/main/default/objects/GI_General_Insurance_Policy__c/GI_General_Insurance_Policy__c.object-meta.xml
<CustomObject>
    <label>General Insurance Policy</label>
    <nameField>
        <displayFormat>GIP-{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Insurance Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>