unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Cash_Transact_Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>Cash_Transact_Sum_Assured__c</fullName>
    <label>Cash &amp; Transact Sum Assured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>