unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Fuel_Card_Sum_Assured__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Card_Sum_Assured__c</fullName>
    <label>Fuel Card Sum Assured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>