unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>General Insurance Policies</relationshipLabel>
    <relationshipName>General_Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>