unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>General_Insurance_Types</valueSetName>
    </valueSet>
</CustomField>