unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>Insured_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insured Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>