unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Last_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Last_Insurance_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Insurance Policy</label>
    <referenceTo>GI_General_Insurance_Policy__c</referenceTo>
    <relationshipLabel>General Insurance Policies</relationshipLabel>
    <relationshipName>General_Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>