unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Money_Policy_For__c.field-meta.xml
<CustomField>
    <fullName>Money_Policy_For__c</fullName>
    <label>Money Policy For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash &amp; Transact</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Save</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Drawer</fullName>
            </value>
            <value>
                <fullName>Fuel Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>