unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Zone Pending</fullName>
            </value>
            <value>
                <fullName>Quotation Approved</fullName>
            </value>
            <value>
                <fullName>Quotation Rejected</fullName>
            </value>
            <value>
                <fullName>Insurance Admin Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Under Process</fullName>
            </value>
            <value>
                <fullName>Insurance Company Pending</fullName>
                <isActive>false</isActive>
                <label>Insurance Company Pending</label>
            </value>
            <value>
                <fullName>Insurance Pending</fullName>
                <isActive>false</isActive>
                <label>Insurance Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>