unpackaged/main/default/objects/GI_General_Insurance_Policy__c/fields/TPL_For__c.field-meta.xml
<CustomField>
    <fullName>TPL_For__c</fullName>
    <label>TPL For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Fork Lift</fullName>
            </value>
            <value>
                <fullName>Other Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>