unpackaged/main/default/objects/GI_General_Insurance_Policy__c/validationRules/GIN_startdate_enddate_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GIN_startdate_enddate_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Policy_Start_Date__c &gt; Policy_End_Date__c</errorConditionFormula>
    <errorDisplayField>Policy_Start_Date__c</errorDisplayField>
    <errorMessage>Start date should not be greater than End date</errorMessage>
</ValidationRule>