unpackaged/main/default/objects/GI_General_Insurance_Policy__c/validationRules/GIN_Status_active_Validations.validationRule-meta.xml
<ValidationRule>
    <fullName>GIN_Status_active_Validations</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(Status__c) ==&#39;Active&#39; &amp;&amp; (  ISBLANK(Sum_Assured__c )||  ISBLANK(Policy_Number__c ) || ISBLANK( Policy_Start_Date__c )|| ISBLANK(  Policy_End_Date__c  )), true, false)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Policy Number or Start Date or End Date or Sum assured should not be blank</errorMessage>
</ValidationRule>