unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Policy_Number__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Policy_Start_Date__c</columns>
    <columns>Policy_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Sum_Assured__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>