unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/Copy_of_Natural_Gas_2021.listView-meta.xml
<ListView>
    <fullName>Copy_of_Natural_Gas_2021</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Insurance_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Dubai Airport</value>
    </filters>
    <filters>
        <field>Policy_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2021</value>
    </filters>
    <label>Dubai Airport</label>
</ListView>