unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/Dry_Wash.listView-meta.xml
<ListView>
    <fullName>Dry_Wash</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Sum_Assured__c</columns>
    <columns>Status__c</columns>
    <columns>Comments__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Dry Wash</value>
    </filters>
    <filters>
        <field>Policy_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2021</value>
    </filters>
    <label>Dry Wash</label>
</ListView>