unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/Mafraq_Hospital_Valet_Parking.listView-meta.xml
<ListView>
    <fullName>Mafraq_Hospital_Valet_Parking</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Insurance_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Mafraq Hospital - Valet Parking</value>
    </filters>
    <filters>
        <field>Policy_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2021</value>
    </filters>
    <label>Mafraq Hospital - Valet Parking 2021</label>
</ListView>