unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/Pending_Policies.listView-meta.xml
<ListView>
    <fullName>Pending_Policies</fullName>
    <columns>NAME</columns>
    <columns>Policy_Number__c</columns>
    <columns>Insurance_Type__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Policy_Start_Date__c</columns>
    <columns>Policy_End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Sum_Assured__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Zone Pending</value>
    </filters>
    <label>Zone Pending Policies</label>
</ListView>