unpackaged/main/default/objects/GI_General_Insurance_Policy__c/listViews/Petroleum_Logistic_Transport.listView-meta.xml
<ListView>
    <fullName>Petroleum_Logistic_Transport</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>Insurance_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>Petroleum &amp; Logistic Transport</value>
    </filters>
    <filters>
        <field>Policy_Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2021</value>
    </filters>
    <label>Petroleum &amp; Logistic Transport 2021</label>
</ListView>